# IStudio-codex

./: CMakeLists.txt  README.md  gdb.txt  project.md
.github/workflows/: ci.yml
cmake/: dependencies.cmake
docs/: grammar.ebnf
docs/adr/: 0001-compiler-architecture.md  0002-lsp-scaffold.md  README.md
docs/spec/: spec-draft.md
examples/: README.md
examples/generic_pair/: program.ist
examples/math_basics/: program.ist
examples/string_formatting/: program.ist
src/: CMakeLists.txt
src/backends/: backend.h
src/backends/cpp/: cpp_backend.cpp  cpp_backend.h
src/cli/: main.cpp
src/front/: ast.cpp  ast.h  ast_dump.cpp  ast_dump.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h
src/ir/: lowering.cpp  lowering.h  module.cpp  module.h  printer.cpp  printer.h  type.h
src/lsp/: message_io.cpp  message_io.h  server.cpp  server.h
src/opt/: constant_folding.cpp  constant_folding.h  pass_manager.cpp  pass_manager.h
src/plugins/: registry.cpp  registry.h
src/sem/: analyzer.cpp  analyzer.h  context.cpp  context.h  types.h
src/support/: diagnostics.cpp  diagnostics.h  span.h  version.cpp  version.h
tests/: CMakeLists.txt  test_main.cpp
tests/backends/: test_cpp_backend.cpp
tests/front/: test_ast_dump.cpp  test_lexer.cpp  test_parser.cpp
tests/ir/: test_ir.cpp  test_lowering.cpp
tests/lsp/: test_lsp.cpp
tests/sem/: test_semantic.cpp
